able to find pull requests from a user in a time window. Some work around storing/obtaining the etag

--- a/.envrc_example
+++ b/.envrc_example
@@ -4,3 +4,4 @@ export COUCHDB_URL="couchdb_url"
 export COUCHDB_USER="couchdb_user"
 export COUCHDB_PASSWORD="couchdb_password"
 export COUCHDB_NAME="database_name"
+export GITHUB_TOKEN="github_token"
