Add config vars and small fixes

--- a/.envrc_example
+++ b/.envrc_example
@@ -5,3 +5,4 @@ export COUCHDB_USER="couchdb_user"
 export COUCHDB_PASSWORD="couchdb_password"
 export COUCHDB_NAME="database_name"
 export GITHUB_TOKEN="github_token"
+export JWT_SECRET="jwt_secret"
